updated my teaching

--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -1,22 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <HTML>
 <HEAD>
- <TITLE>Math 653: Graduate Algebra -- Autumn 2023</TITLE>
+ <TITLE>Math 653: Graduate Algebra -- Autumn 2025</TITLE>
  <link rel="shortcut icon" href="../../images/sottile.ico"> 
  <link href="../../images/frank.css" rel="stylesheet" type="text/css">
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </HEAD>
 <!---------------------------------------------------------------------------->
-  <H1>Math 653: Graduate Algebra &nbsp; &nbsp; &nbsp; Autumn 2023</h1> 
+  <H1>Math 653: Graduate Algebra &nbsp; &nbsp; &nbsp; Autumn 2025</h1> 
 
 <!---------------------------------------------------------------------------->
 <hr>
-<!-------------------------------------------
-<font color=red>
-  Final exam December 13 from 1&ndash;3 PM in Blocker 160. 
-</font>--------------------------------->
-<!-------------------------------
-<hr>--------------------------------------------->
 <!---------------------------------------------------------------------------->
 
 <font color=red></font>
@@ -30,10 +24,9 @@ Homework is on a <a href="653_HW.html">separate page</a>
 <dl>
   <dd><font size=+1 color=maroon>Instructor:</font> <a href="../../index.html">Frank Sottile</a>  </dd>
 
-  <dd><font size=+1 color=maroon>Lectures:</font> MWF 11:30&ndash;12:20 Blocker 121 </dd>
+  <dd><font size=+1 color=maroon>Lectures:</font> TuTh 12:45&ndash;14:00 Blocker 121 </dd>
 
-
- <dd><font size=+1 color=maroon>Office:</font> Blocker 601 K in the geometry centre   </dd>
+  <dd><font size=+1 color=maroon>Office:</font> Blocker 601 L in the geometry centre   </dd>
 
   <dd>
 <!---------------------------------------------------------->
@@ -46,7 +39,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
      <IMG SRC="../images/dot.gif"> Mondays: 
     </TD>  
     <TD>
-     14:00&ndash;14:50
+ <!--    14:00&ndash;14:50 -->
     </TD>
    </TR> 
   <TR>
@@ -54,7 +47,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
      <IMG SRC="../images/dot.gif"> Wednesdays: &nbsp;
     </TD>  
     <TD>
-     13:00&ndash;14:00
+  <!--     13:00&ndash;14:00 -->
     </TD>
    </TR>
    <TR>
@@ -89,7 +82,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
     This is a first semester graduate course in abstract algebra, and
     is intended to be an introduction to the fundamental objects of groups, rings, modules,
     fields, and vector spaces.
-    I intend to cover most of Chapters I&ndash;III and parts of Chapter IV from Hungerford's
+    I intend to cover most of <font color="red">Chapters V</font> from Lang's
     classical algebra text (at right).  
     We should cover the following topics, time permitting.
    <ul>
@@ -118,7 +111,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
   <!---------------------------------------------------------------------------->
   <td>&nbsp;  </td>
   <!---------------------------------------------------------------------------->
-  <td valign=top><img  src="Hungerford.jpg">
+  <td valign=top><img  src="Lang_cover.png">
  </tr>
 </table>
 
@@ -167,10 +160,10 @@ Homework is on a <a href="653_HW.html">separate page</a>
         and graded.
       Problems may  be assigned in nearly every class; a summary may be found <a href="653_HW.html"></a>
       <font color=red>here</font></a>.
-        These will be marked by our grader, C.J. Bott, an advanced senior graduate student, and returned on
-        <font color=magenta>Fridays</font>.   Sometimes, there will be homework you are to hand into Frank.<br>
-        As this is a qualifying class, there will be plenty of homework, and you should use it as a way to master the material,
-        which is fundamental to any educated mathematician.
+        These will be marked by our grader, Daniel Dale, an advanced senior graduate student, and returned on
+        <font color=magenta>TBA</font>.   Sometimes, there will be homework you are to hand into Frank.<br>
+        As this is a qualifying class, there will be plenty of homework, and you should use it as a way to master the
+        material, which is fundamental to any educated mathematician.
     </dd>
    
   </dl> 
@@ -210,10 +203,10 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <dd><font size=+1 color=maroon>Exams:</font>
   <dl>
    <dd>
-     The class will have three exams.
-     There will be two evening exams during the semester, likely 3 hours each.
-     The first will be during the first week of October, and the second will be the week before Thanksgiving.
-     There will also be a final exam Tuesday, 12 December 10:30&ndash;12:30.
+     The class will have <font color=red>TBA</font> exams.
+     There will be evening exams during the semester, likely 3 hours each.
+     <!--The first will be during the first week of October, and the second will be the week before Thanksgiving.-->
+     There will also be a final exam Tuesday, 16 December 89:00&ndash;10:00.
    </dd>
   </dl>
  </dd>
@@ -233,7 +226,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-Last modified: Sun Aug 20 14:33:04 CDT 2023 by sottile
+Last modified: Mon Aug 11 09:23:44 CDT 2025 by sottile
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
