--- a/teaching/25.2/653_HW.html
+++ b/teaching/25.2/653_HW.html
@@ -1,8 +1,8 @@
-<HTML><HEAD><TITLE>Homework for Math 663</TITLE></HEAD>
+<HTML><HEAD><TITLE>Homework for Math 653</TITLE></HEAD>
 <BODY BGCOLOR="#FFFFFF"  alink="#FFFFFF">
 <A NAME="top"></A>
 <H2>Autumn 2023<BR>
- Math 653: Graduate Algebra I
+ Math 653: Graduate Algebra I, Autumn 2025
 </H2>
 <h2><font color=blue>Homework Assignments</font>
 </H2>
@@ -12,19 +12,8 @@
 <hr>
 <!------------------------------------------------------------------------->
 <dl>
- <dd>  Assignment 13: <a href="653_HW/HW13.pdf">pdf</a> <a href="653_HW/HW13.tex">LaTeX</a> Due 4 December.</dd>
- <dd>  Assignment 12: <a href="653_HW/HW12.pdf">pdf</a> <a href="653_HW/HW12.tex">LaTeX</a> Due 27 November.</dd>
- <dd>  Assignment 11: <a href="653_HW/HW11.pdf">pdf</a> <a href="653_HW/HW11.tex">LaTeX</a> Due 15/17 November.</dd>
- <dd>  Assignment 10: <a href="653_HW/HW10.pdf">pdf</a> <a href="653_HW/HW10.tex">LaTeX</a> Due  6 November.</dd>
- <dd>  Assignment 9: <a href="653_HW/HW09.pdf">pdf</a>  <a href="653_HW/HW09.tex">LaTeX</a> Due 30 October.</dd>
- <dd>  Assignment 8: <a href="653_HW/HW08.pdf">pdf</a>  <a href="653_HW/HW08.tex">LaTeX</a> Due 23 October.</dd>
- <dd>  Assignment 7: <a href="653_HW/HW07.pdf">pdf</a>  <a href="653_HW/HW07.tex">LaTeX</a> Due 16 October.</dd>
- <dd>  Assignment 6: <a href="653_HW/HW06.pdf">pdf</a>  <a href="653_HW/HW06.tex">LaTeX</a> Due  2 October.</dd>
- <dd>  Assignment 5: <a href="653_HW/HW05.pdf">pdf</a>  <a href="653_HW/HW05.tex">LaTeX</a> Due 25 September.</dd>
- <dd>  Assignment 4: <a href="653_HW/HW04.pdf">pdf</a>  <a href="653_HW/HW04.tex">LaTeX</a> Due 18 September.</dd>
- <dd>  Assignment 3: <a href="653_HW/HW03.pdf">pdf</a>  <a href="653_HW/HW03.tex">LaTeX</a> Due 11 September.</dd>
- <dd>  Assignment 2: <a href="653_HW/HW02.pdf">pdf</a>  <a href="653_HW/HW02.tex">LaTeX</a> Due  6 September.</dd>
- <dd>  Assignment 1: <a href="653_HW/HW01.pdf">pdf</a>  <a href="653_HW/HW01.tex">LaTeX</a> Due 28 August.</dd>
+  <!-- <dd>  Assignment 1: <a href="653_HW/HW01.pdf">pdf</a>  <a href="653_HW/HW01.tex">LaTeX</a> Due 28 August.</dd>-->
+  <dd>No assignments, yet.   There will be homework assigned on the first day of class.</dd>
 </dl>
 
 
