Bestiary and teaching

--- a/conferences.html
+++ b/conferences.html
@@ -155,10 +155,21 @@
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
+ <li> AMS Special Session on  Spectral Theory of Discrete and Continuous Sch&ouml;dinger Operators,
+      Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="http://mate.dm.uba.ar/~coalaga/">Computational Algebra, Algebraic Geometry and Applications II</a>,
      Buenos Aires, Argentina, December 15 &ndash; 17 2025.
   </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://icerm.brown.edu/program/semester_program_workshop/tw-25-wagtc">Webs in Algebra, Geometry, Topology and Combinatorics</a>,
+   ICERM, Providence, RI, 8 &ndash; 12 December 2025.
+ </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
@@ -168,31 +179,16 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://ragi.sciencesconf.org/">Real Algebraic Geometry and Interactions (RAGI)</a>,
-   Universit&eacute;  Cote d'Azur, Nice, 6 &ndash; 10 October 2025.
+   Special Session on Applied and Computational Algebra at
+   <a href="https://www.ams.org/meetings/sectional/2322_program.html">AMS Fall Central Sectional Meeting</a>
+   Saint Louis University, St. Louis, MO
+     October 18&ndash;19, 2025.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
    <a href="https://sites.google.com/view/siamtxla2025/">SIAM TX-LA meeting</a>,
    Oden Institute, University of Texas at Austin, ICERM, Providence, RI, 26&ndash;28 September 2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://www.siam.org/conferences-events/siam-conferences/an25/">Joint SIAM/CAIMS Annual Meetings</a>,
-   Montr&eacute;al Convention Centre, 
-   28 July &ndash; 1 August 2025.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
-      Algebraic Geometry (AG25)</a>,
-   University of Wisconsin,
-   7  &ndash; 11 July 2025.
-   <a href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=82528">Preliminary Information about conference
-   program</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
 </UL>
