--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
     <tr valign=top><td><font color=brown>MATH 653</font>&nbsp;</td>
-      <td><a href="teaching/25.1/RAGA.html">Algebra I</a></td>
-      <td align=left>&nbsp;<a href="teaching/25.1/RAGA.txt"></a> </td>
+      <td><a href="teaching/25.2/653.html">Algebra I</a></td>
       <td colspan=1> Tu-Th </td><td> 12:45&ndash;14:00</td><td> Blocker 121
       </td>
     </tr>
@@ -204,50 +203,39 @@
      <td colspan=2><b><FONT SIZE=+1 color=brown>Seminars:</font></b>
     </td></tr>
    <tr> <td>&nbsp;</td>
-     <td><a href="http://www.math.tamu.edu/seminars/geometry/">Geometry</a> 
+     <td><a href="https://tamu-seminar.github.io/geometry/">Geometry</a> 
      </td>
      <td width=30></td>
      <td>Mondays 3:00&ndash;3:50&nbsp;&nbsp;</td>
      <td>Blocker 302</td>
    </tr>
       <tr> <td>&nbsp;</td>
-     <td><a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry</a>
+     <td><a href="https://www.math.tamu.edu/seminars/cag/"></a>Combinatorial Algebraic Geometry
      </td>
      <td width=30></td>
-     <td>Tuesdays 12:45&ndash;2:00</td>
-     <td>Blocker 302</td>
+     <td>TBD</td>
+     <td>TBD</td>
    </tr>
    </tr>
       <tr> <td>&nbsp;</td>
-     <td><a href="https://www.math.tamu.edu/seminars/harmonic/">MPHA</a>
+     <td><a href="https://calendar.google.com/calendar/u/0/embed?src=c_086b4d5be2e592c7ee26dc818975ae39bef8b677f4f1fa6077bdc213b57073fc@group.calendar.google.com&ctz=America/Chicago">MPHA</a>
      </td>
      <td width=30></td>
-     <td>Fridays 1:50&ndash;2:40&nbsp;&nbsp;</td>
+     <td>Fridays 1:50&ndash;2:50&nbsp;&nbsp;</td>
      <td>Blocker 302</td>
    </tr>
     <tr>
      <td></td>
-     <td><a href="http://www.math.tamu.edu/seminars/algebra_combinatorics/">Algebra and Combinatorics</a>
+     <td><a href="https://tamu-seminar.github.io/alg-comb/">Algebra and Combinatorics</a>
      </td>
      <td width=30></td>
      <td> Fridays 3:00&ndash;3:50&nbsp;&nbsp;</td>
      <td>Blocker 302</td>
    </tr>
-<!--      <tr>
-     <td></td>
-     <td>
-      <a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry</a>
-     </td>
-     <td></td>
-     <td> Fridays 11:00&ndash;11:50&nbsp;&nbsp;
-     </td>
-     <td>Blocker 605AX</td>
-    </tr>-->
-
     <tr>
      <td></td>
      <td>
-      <a href="http://www.math.tamu.edu/seminars/geometry/">Geometry</a>
+      <a href="http://www.math.tamu.edu/seminars/geometry/"></a>Geometry
      </td>
      <td></td>
      <td> Fridays 4:00&ndash;5:00&nbsp;
