--- a/research/stories/Bestiary/Bestiary.html
+++ b/research/stories/Bestiary/Bestiary.html
@@ -59,12 +59,15 @@
 <table border=1>
   <tr>
     <td colspan=2><font size=+1>Bipartite, four edges</font></td>
-    <td rowspan=2><img src="www_images/fourEdges_4Dirac.png"></a></td>
-    <td rowspan=2><img src="www_images/fourEdges_2Dirac.png"></a></td>
+    <td rowspan=2><a href="Bestiary/fourEdges/BV_4Dirac.gif"><img src="Bestiary/fourEdges/BV_4Dirac.png"></a></td>
+    <td rowspan=2><img src="Bestiary/fourEdges/BV_11120.png"></a></td>
+    <td rowspan=2><img src="Bestiary/fourEdges/BV_11122.png"></a></td>
+    <td rowspan=2><a href="Bestiary/fourEdges/BV_2Dirac.gif"><img src="Bestiary/fourEdges/BV_2Dirac.png"></a></td>
+    <td rowspan=2><img src="Bestiary/fourEdges/BV_32810.png"></a></td>
   </tr>
   <tr>    
-    <td><img src="www_images/fourEdges_graph.png"></a></td>
-    <td><img src="www_images/fourEdges_polytope.png"></a></td>
+    <td><img src="Bestiary/fourEdges/graph.png"></td>
+    <td><img src="Bestiary/fourEdges/polytope.png"></td>
   </tr>
 </table>
 <!---------------------------------------------------------------------------->
@@ -170,11 +173,27 @@
     <td colspan=6><font size=+1>singular House</a></font></td>
   </tr>
   <tr>
-    <td><a href="Bestiary/singHouse/graph.eps"><img src="www_images/singHouse_graph.png"></a></td>
-    <td><a href="Bestiary/singHouse/polytope.png"><img src="www_images/singHouse_polytope.png"></a></td>
-    <td><a href="Bestiary/singHouse/BV_general_big.png"><img src="Bestiary/singHouse/BV_general.png" height=150p></a></td>
+    <td><a href="Bestiary/singHouse/graph.eps"><img src="Bestiary/singHouse/graph.png"></a></td>
+    <td><a href="Bestiary/singHouse/polytope.png"><img src="Bestiary/singHouse/polytope.png"></a></td>
+    <td><a href="Bestiary/singHouse/BV_general_big.png"><img src="Bestiary/singHouse/BV_general.png" height=150pt></a></td>
     <td><a href="Bestiary/singHouse/BV_1component_big.png"><img src="Bestiary/singHouse/BV_1component.png" height=150p></a></td>
     <td><a href="Bestiary/singHouse/BV_2components_big.png"><img src="Bestiary/singHouse/BV_2components.png" height=150p></a></td>
+
+  </tr>
+</table>    
+<!---------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------->
+<table border=1>
+  <tr>
+    <td colspan=6><font size=+1>many partial flats</a></font></td>
+  </tr>
+  <tr>
+    <td><a href="Bestiary/manyPartialFlats/graph.eps"><img src="Bestiary/manyPartialFlats/graph.png"></a></td>
+    <td><a href="Bestiary/manyPartialFlats/polytope.png"><img src="Bestiary/manyPartialFlats/polytope.png"></a></td>
+    <td><a href="Bestiary/manyPartialFlats/BV_general_big.png"><img src="Bestiary/manyPartialFlats/BV_general.png" height=150p></a></td>
+    <td><a href="Bestiary/manyPartialFlats/BV_1component_big.png"><img src="Bestiary/manyPartialFlats/BV_1component.png" height=150p></a></td>
+    <td><a href="Bestiary/manyPartialFlats/BV_2components_big.png"><img src="Bestiary/manyPartialFlats/BV_2components.png" height=150p></a></td>
 
   </tr>
 </table>    
