--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -63,9 +63,9 @@ Homework is on a <a href="653_HW.html">separate page</a>
     <font color=red>Text-only with 653 in the subject line</font>.
 
    
- <dd><font size=+1 color=maroon>Book:</font> <i>Algebra</I> by Hungerford. 
-      <a href="https://link.springer.com/book/10.1007/978-1-4612-6101-8">Download</a>
-      chapters or purchase inexpensive softcover from Springer.
+ <dd><font size=+1 color=maroon>Book:</font> <i>Algebra</I> by Lang 
+      <a href="https://link.springer.com/book/10.1007/978-1-4613-0041-0">Download</a>
+      chapters or purchase inexpensive softcover from Springer.  (You need to do this on campus.)
  
  </dl>
 <!----------------------------------------------------------------------->
@@ -82,7 +82,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
     This is a first semester graduate course in abstract algebra, and
     is intended to be an introduction to the fundamental objects of groups, rings, modules,
     fields, and vector spaces.
-    I intend to cover most of <font color="red">Chapters V</font> from Lang's
+    I intend to cover most of <font color="red">Chapters ??</font> from Lang's
     classical algebra text (at right).  
     We should cover the following topics, time permitting.
    <ul>
@@ -111,7 +111,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
   <!---------------------------------------------------------------------------->
   <td>&nbsp;  </td>
   <!---------------------------------------------------------------------------->
-  <td valign=top><img  src="Lang_cover.png">
+  <td valign=top><img height=500pt  src="Lang_cover.png">
  </tr>
 </table>
 
@@ -156,10 +156,9 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <!-------------------------------------------------------------------------------> 
  <dd><font size=+1 color=maroon>Homework:</font>
   <dl>
-    <dd>There will be weekly written homework assignments to be handed in (on  <font color=magenta>Mondays</font>)
+    <dd>There will be weekly written homework assignments to be handed in (on  <font color=magenta>TBA</font>)
         and graded.
-      Problems may  be assigned in nearly every class; a summary may be found <a href="653_HW.html"></a>
-      <font color=red>here</font></a>.
+      Problems may  be assigned in nearly every class; a summary may be found <a href="653_HW.html"><font color=red>here</font></a>.
         These will be marked by our grader, Daniel Dale, an advanced senior graduate student, and returned on
         <font color=magenta>TBA</font>.   Sometimes, there will be homework you are to hand into Frank.<br>
         As this is a qualifying class, there will be plenty of homework, and you should use it as a way to master the
