--- a/talks.html
+++ b/talks.html
@@ -118,21 +118,43 @@
  <ul>
 
   <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    AMS Special Session on  Spectral Theory of Discrete and Continuous Sch&ouml;dinger Operators,
+    Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>, 
+    <a href="http://mate.dm.uba.ar/~coalaga/">Computational Algebra, Algebraic Geometry and Applications II</a>,
+      Buenos Aires, Argentina, December 15 &ndash; 17 2025.
+   </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>, 
+    <a href="https://icerm.brown.edu/program/semester_program_workshop/sp-f25-w3">Computation in Representation Theory</a>,
+    ICERM, Providence, RI, 10 &ndash; 14 November 2025.
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Special Session on Applied and Computational Algebra at
+    <a href="https://www.ams.org/meetings/sectional/2322_program.html">AMS Fall Central Sectional Meeting</a>
+    Saint Louis University, St. Louis, MO
+      October 18&ndash;19, 2025.
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>TBA</I></font>,
     DiPrima Lecture, Department of Mathematics, Rensselaer Polytechnic Institute,
      29&ndash;30 September  2025.
     <a href="talks/25/RPI.txt"></a>
    </li>
-  <!--------------------------------------------------------------------------------------------------->
-  <!-----------------------------------------------------------------
-  <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
-    Minisymposium on Methods in Applied and Computational Topology and Geometry
-    at the <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
-     Austin, TX, 26&ndash;28 September  2025.
-    <a href="talks/25/TX-LA25_ACTG.txt"></a>
-   </li>---------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
@@ -143,21 +165,29 @@
     <a href="talks/25/TX-LA_Spectral.txt">abstract</a>
    </li>
   <!--------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>, 
+    <FONT COLOR="AA00FF"><I>(n-1)! Formulas for double Schubert polynomials</I></font>, 
+    <a href="https://tamu-seminar.github.io/alg-comb/"></a>Algebra and Combinatorics Seminar,
+    TAMU, 19 September 2025.
+    <a href="talks/25/DoubleSchubert.txt">abstract</a>
+  </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Families of graphs whose Bloch varieties are perfect Morse functions</I></font>, 
     <a href="https://www.math.tamu.edu/seminars/cag/"></a>MPHA Seminar,
     TAMU, 29 August 2025.
-    <a href="talks/25/RealBounds.txt"></a>
+    <a href="talks/25/TX-LA_Spectral.txt">abstract</a>
   </li>
-  <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
 </ul>
 <hr>
 <B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
 <ul>
   <!--------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Structured Schubert Problems</I></font>, 
     <a href="https://www.math.tamu.edu/seminars/cag/"></a>Seminar,
