--- a/talks.html
+++ b/talks.html
@@ -120,9 +120,18 @@
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Algebraic geometry of periodic graphs</I></font>,
+    AMS Special Session on  Open Problems in Geometric Data Science,
+    Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
+    <a href="talks/26/JMM_Kurlin.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>Periodic graphs whose band functions are perfect Morse functions</I></font>,
     AMS Special Session on  Spectral Theory of Discrete and Continuous Sch&ouml;dinger Operators,
     Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
+    <a href="talks/26/JMM_Spectral.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
@@ -141,11 +150,12 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>The critical point degree of a periodic graph</I></font>,
     Special Session on Applied and Computational Algebra at
     <a href="https://www.ams.org/meetings/sectional/2322_program.html">AMS Fall Central Sectional Meeting</a>
     Saint Louis University, St. Louis, MO
-      October 18&ndash;19, 2025.
+    October 18&ndash;19, 2025.
+        <a href="talks/25/StLouis.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
