--- a/teaching.html
+++ b/teaching.html
@@ -134,37 +134,38 @@
 <!--    Before teaching any course, especially one you have taught before,  ---->
 <!--    re-read your evaluations !                                          ---->
 <!------------------------------------------------------------------------------>
- <!---------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Fall  2025</font></b>
-   <table border=0>
-   <!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
+  <b><FONT SIZE=+1 color=brown>Fall  2025</font></b>
+  <table border=0>
+    <!---------------------------------------------------------------------------------------------------->
     <tr valign=top><td><font color=brown>MATH 653</font>&nbsp;</td>
-      <td><a href="teaching/25.2/653.html"></a>Algebra I</a></td>
-      <td colspan=2> Tu-Th 12:45&ndash;14:00.</td><td> Blocker 121
+      <td><a href="teaching/25.2/653.html">Algebra I</a></td>
+      <td colspan=1> Tu-Th </td><td> 12:45&ndash;14:00</td><td> Blocker 121
       </td>
     </tr>
      <!-------------------------------------------------->
-    <tr valign=top><td colspan=3 rowspan=1><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
-     <td>  </td><td> </td>
-    </tr>
+    <tr valign=top><td colspan=4 rowspan=1><font color=blue><b>Office Hours:</b></font> &nbsp; Blocker 601L </td><td></td>
+   </tr>
     <!-------------------------------------------------->
-<!--     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>-->
-     <!-------------------------------------------------->
-     <tr><td></td><td colspan=4><hr></td></tr>
+    <tr><td colspan=3>  Mondays &amp;  Tuesdays </td> <td colspan=2>14:00-15:00 </td> 
+    <!-------------------------------------------------->
+    <!-------------------------------------------------->
+   <tr><td colspan=2> Also, by Appointment</td></tr>
+   <tr><td colspan=4><hr></td></tr>
     <!-------------------------------------------------->
    <tr valign=top>
-     <td colspan=3><font color=blue><b>Honors Advising:</b></font></td>
-     <td> </td><td></td>
+     <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
+     <td colspan=2><a href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
     </tr>
     <!-------------------------------------------------->
-     <tr valign=top><td rowspan=3></td>     <td colspan=2 rowspan=3>Blocker 601L</td>
-      <td>  </td><td> </td> </tr>
+     <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
+      <td colspan=2 >15:00&ndash;16:00</td>
+      <td>  </td></tr>
     <!-------------------------------------------------->
-<!--     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr> -->
+     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
     <!-------------------------------------------------->
 <!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
-    <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
   </table>
   <!---------------------------------------------------------------------------------------------------->
 
@@ -190,29 +191,7 @@
     Isaiah Galo,  TAMU Master's Student.
  </dd>
  <!---------------------------------------------------------------------------------------------------->  
- <!---------------------------------------------------------------------------------------------------->
- <dd>
-    Merri Stillman,  TAMU Master's Student.
- </dd>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <dd>
-    Jonah Robinson,  TAMU Master's Student.  
- </dd>
- <!---------------------------------------------------------------------------------------------------->
- <!------- <dd>
-  Jennifer Pickrel,  TAMU Master's Student.
- </dd>------>
- <br>
- <!------------------------------------------------------------------>
-  <dd>
-    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D. Student.
-  </dd>
- <!------------------------------------------------------------------>
- <!------------------------------------------------------------------>
-  <dd>
-    <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
-  </dd>
+  <br>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <dd>
