--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -39,15 +39,15 @@ Homework is on a <a href="653_HW.html">separate page</a>
      <IMG SRC="../images/dot.gif"> Mondays: 
     </TD>  
     <TD>
- <!--    14:00&ndash;14:50 -->
+   14:00&ndash;14:50
     </TD>
    </TR> 
   <TR>
     <TD></TD> <TD>  
-     <IMG SRC="../images/dot.gif"> Wednesdays: &nbsp;
+     <IMG SRC="../images/dot.gif"> Tuesdays: &nbsp;
     </TD>  
     <TD>
-  <!--     13:00&ndash;14:00 -->
+      14:10&ndash;15:00
     </TD>
    </TR>
    <TR>
@@ -82,7 +82,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
     This is a first semester graduate course in abstract algebra, and
     is intended to be an introduction to the fundamental objects of groups, rings, modules,
     fields, and vector spaces.
-    I intend to cover most of <font color="red">Chapters ??</font> from Lang's
+    I intend to cover most of <font color="red">Chapters 1 and 2, and some other bits</font> from Lang's
     classical algebra text (at right).  
     We should cover the following topics, time permitting.
    <ul>
@@ -156,11 +156,11 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <!-------------------------------------------------------------------------------> 
  <dd><font size=+1 color=maroon>Homework:</font>
   <dl>
-    <dd>There will be weekly written homework assignments to be handed in (on  <font color=magenta>TBA</font>)
+    <dd>There will be weekly written homework assignments to be handed in (on  <font color=magenta>Thursdays</font>, at the starat of class)
         and graded.
       Problems may  be assigned in nearly every class; a summary may be found <a href="653_HW.html"><font color=red>here</font></a>.
         These will be marked by our grader, Daniel Dale, an advanced senior graduate student, and returned on
-        <font color=magenta>TBA</font>.   Sometimes, there will be homework you are to hand into Frank.<br>
+        <font color=magenta>Tuesdays</font>.   Sometimes, there will be homework you are to hand into Frank.<br>
         As this is a qualifying class, there will be plenty of homework, and you should use it as a way to master the
         material, which is fundamental to any educated mathematician.
     </dd>
@@ -191,10 +191,9 @@ Homework is on a <a href="653_HW.html">separate page</a>
        Also, you are absolutely forbidden to consult web sites or problem solution sources
        (other than the textbook and class notes).
        Violating this rule has serious consequences, both as it violates the universities
-       academic integrity policy <font color=red (read that 
-       <A HREF="http://aggiehonor.tamu.edu/RulesAndProcedures/HonorSystemRules.aspx">here</a>), </font>
+       academic integrity policy (read that in the official syllabus), 
        and because not doing your own work will likely lead to an inability to do the problems 
-       on the course exams.
+       on the course exams and very poor marks.
    </dd>
   </dl>
  </dd>
