--- a/advising/advising.html
+++ b/advising/advising.html
@@ -68,17 +68,7 @@ You needn't take my word on this, feel free to contact those who have worked wit
 
 <font color=maroon>Current Students</font>
  <ul>
- <!------------------------------------------------------------------>
- <li>
-   <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D.  Student.
- </li>
- <!------------------------------------------------------------------>
- <!------------------------------------------------------------------>
- <li>
-    <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
- </li>
- <!------------------------------------------------------------------>
- <!------------------------------------------------------------------>
+  <!------------------------------------------------------------------>
  <li>
     <A HREF="https://jordylopez27.github.io/"></a>Somak Dutta, TAMU Ph.D. Student.
  </li>
@@ -92,6 +82,16 @@ You needn't take my word on this, feel free to contact those who have worked wit
 
 <font color=maroon>Former Students</font>
 <ul>
+<!------------------------------------------------------------------>
+ <li>
+   <A HREF="https://cbott2.github.io/">C.J. Bott</a>,  TAMU Ph.D. 2025. Postdoc at Bringham Young University.
+ </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <li>
+    <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. 2025. Postdoc at Notre Dame.
+ </li>
+ <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
     <A HREF="http://mattfaust.github.io/">Matthew Faust</a>, TAMU Ph.D. 2024.
