--- a/index.html
+++ b/index.html
@@ -174,23 +174,25 @@
       </td>
     </tr>
      <!-------------------------------------------------->
-    <tr valign=top><td colspan=3 rowspan=1><font color=blue><b>Office Hours:</b></font> </td>
-     <td> </td><td></td>
+    <tr valign=top><td colspan=4 rowspan=1><font color=blue><b>Office Hours:</b></font> &nbsp; Blocker 601L </td><td></td>
    </tr>
     <!-------------------------------------------------->
-<!--     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>-->
-     <!-------------------------------------------------->
-     <tr><td></td><td colspan=4><hr></td></tr>
+    <tr><td colspan=3>  Mondays &amp;  Tuesdays </td> <td colspan=2>14:00-15:00 </td> 
+    <!-------------------------------------------------->
+    <!-------------------------------------------------->
+   <tr><td colspan=2> Also, by Appointment</td></tr>
+   <tr><td colspan=4><hr></td></tr>
     <!-------------------------------------------------->
    <tr valign=top>
-     <td colspan=3><font color=blue><b>Honors Advising:</b></font><br>Blocker 601L</br></td>
-     <td>Summer 2025:</td><td colspan=2>Mon. &amp; Tues. &nbsp; 13:30-14:00 </td>
+     <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
+     <td colspan=2><a href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
     </tr>
     <!-------------------------------------------------->
-     <tr valign=top><td colspan=2></td>     <td colspan=2 rowspan=3></td>
-      <td>  </td><td> </td> </tr>
+     <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
+      <td colspan=2 >15:00&ndash;16:00</td>
+      <td>  </td></tr>
     <!-------------------------------------------------->
-<!--     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr> -->
+     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
     <!-------------------------------------------------->
 <!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
     <!---------------------------------------------------------------------------------------------------->
@@ -213,8 +215,8 @@
      <td><a href="https://www.math.tamu.edu/seminars/cag/"></a>Combinatorial Algebraic Geometry
      </td>
      <td width=30></td>
-     <td>TBD</td>
-     <td>TBD</td>
+     <td>Thursdays  10:00&ndash;11:00</td>
+     <td>Blocker 605A</td>
    </tr>
    </tr>
       <tr> <td>&nbsp;</td>
