updated talks and course website

--- a/teaching/25.2/653.html
+++ b/teaching/25.2/653.html
@@ -82,28 +82,31 @@ Homework is on a <a href="653_HW.html">separate page</a>
     This is a first semester graduate course in abstract algebra, and
     is intended to be an introduction to the fundamental objects of groups, rings, modules,
     fields, and vector spaces.
-    I intend to cover most of <font color="red">Chapters 1 and 2, and some other bits</font> from Lang's
+    I intend to cover all of Chapters I and II, and most of IV from Lang's
     classical algebra text (at right).  
     We should cover the following topics, time permitting.
    <ul>
+    <li>monoids</li>
     <li>basic group theory</li>
-    <li>solvable groups</li>
+    <li>byclic groups</li>
     <li>finitely generated abelian groups</li>
-    <li>Sylow theorems and basics of the classification of simple groups</li>
+    <li>Sylow theorems</li>
+    <li>categories and functors<?li>
     <li>free groups and inverse limits</li>
-    <li>Rings, integral domains, and fields</li>
+    <li>basic ring teory</li>
     <li>commutative rings</li>
-    <li>polynomial rings</li>
+    <li>polynomial and group rings</li>
     <li>localization</li>
     <li>principal ideal domains and unique factorization domains</li>
-    <li>power series and power series rings</li>
-    <li>introduction to modules</li>
-    <li>exact sequences</li>
-    <li>free modules and vector spaces</li>
+    <li>polynomials in one variable</li>
+    <li>factorization of polynomials</li>
+    <li>Hilbert's theorem</li>
+    <li>partial fractions</li>
+    <li>symmetric polynomials</li>
    </ul>
 
    <font size=+1 color=brown>Prerequisites:</font>  Undergraduate abstract algebra (Math
-   415/6) or its equivalents. 
+   415/6) or its equivalents, as determined by the instructor. 
   </dd>
 </dl>
 
@@ -128,7 +131,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
       This is the first of a two-term sequence on Graduate Algebra, which is a
       foundational course covering material that every mathematician should know. 
       It forms the air one breathes in many research fields, from algebra
-      to number theory, geometry, and algebraic geometry, and is assumed in
+      to number theory, geometry, algebraic geometry, and algebraic combinatorics, and is assumed in
       many advanced classes in these topics.
       Basic algebra is fundamental to any educated mathematician.
       The pace will be fast and advanced for many, for there is a lot to cover.
@@ -140,7 +143,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <!-------------------------------------------------------------------------------> 
  <dd><font size=+1 color=maroon>Reading:</font>
   <dl>
-   <dd> You should read the sections of the book before they are covered in class, work over
+   <dd> You should read the sections of the book <font color=magenta>before</font> they are covered in class, work over
         your notes after lecture (I will not review material covered in previous lectures!),
         and reread the sections after they are covered.
         Rewriting your notes is an excellent path towards full understanding (I did
@@ -149,8 +152,6 @@ Homework is on a <a href="653_HW.html">separate page</a>
         be found in the book and in the exercises&mdash;read those too.
      </dd>
 
-   <dd> You are expected to read and understand the first chapter before class starts.
-    </dd>
   </dl> 
  </dd>
  <!-------------------------------------------------------------------------------> 
@@ -162,7 +163,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
         These will be marked by our grader, Daniel Dale, an advanced senior graduate student, and returned on
         <font color=magenta>Tuesdays</font>.   Sometimes, there will be homework you are to hand into Frank.<br>
         As this is a qualifying class, there will be plenty of homework, and you should use it as a way to master the
-        material, which is fundamental to any educated mathematician.
+        material, which as noted is fundamental to any educated mathematician.
     </dd>
    
   </dl> 
@@ -176,10 +177,10 @@ Homework is on a <a href="653_HW.html">separate page</a>
       For example, after working out the solution to a homework problem, which is at best
        a very rough draft, you should then <i>neatly</i> write up the solution properly,
        omitting needless steps and falsehoods (remember, a false claim in a proof
-       invalidates the proof), and striving for clarity and brevity.
-       To facilitate this development, I will assign and collect some problems
+       invalidates the proof and results in a score of zero), and striving for clarity and brevity.
+ <!--      To facilitate this development, I will assign and collect some problems
        which I will mark, using a significantly more rigourous scale than perhaps that
-       employed by our grader, which will be discussed in class.       
+       employed by our grader, which will be discussed in class.       -->
    </dd>
   </dl>
  </dd>
@@ -194,6 +195,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
        academic integrity policy (read that in the official syllabus), 
        and because not doing your own work will likely lead to an inability to do the problems 
        on the course exams and very poor marks.
+       A handy place to collaborate could be Blocker suite 601; it has three boards and a nearby expert or three.
    </dd>
   </dl>
  </dd>
@@ -201,10 +203,10 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <dd><font size=+1 color=maroon>Exams:</font>
   <dl>
    <dd>
-     The class will have <font color=red>TBA</font> exams.
-     There will be evening exams during the semester, likely 3 hours each.
-     <!--The first will be during the first week of October, and the second will be the week before Thanksgiving.-->
-     There will also be a final exam Tuesday, 16 December 89:00&ndash;10:00.
+     The class will have <font color=red>three</font> exams.
+     They will be evening exams during the semester, likely 3 hours each.  Sottile will provide dinner.
+     They will be during te weeks of September 24, October 29, and December 3.
+     There is no final exam for this class.
    </dd>
   </dl>
  </dd>
@@ -212,8 +214,8 @@ Homework is on a <a href="653_HW.html">separate page</a>
  <dd><font size=+1 color=maroon>Grading:</font> 
   <dl>
    <dd>
-     Your course grade will be based in equal parts on homework, the midterm exams, 
-     and on the final exam.  <font color=magenta>(One-third homework and final, and one-sixth each of the midterm exams.)</font>
+     Your course grade will be based in equal parts on homework and the midterm exams, 
+     That is, 25% homeworks, and each exam is worth 25%.
    </dd>
   </dl>
  </dd>
@@ -224,7 +226,7 @@ Homework is on a <a href="653_HW.html">separate page</a>
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
-Last modified: Mon Aug 11 09:23:44 CDT 2025 by sottile
+Last modified: Sat Aug 23 06:21:33 CDT 2025 by sottile
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
